--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Build with dotnet
       run: dotnet build --no-restore --configuration Release
     
-    - name: Test
-      run: dotnet test --no-build --verbosity minimal OutResp.sln
+    #- name: Test
+      #run: dotnet test --no-build --verbosity minimal OutResp.sln
     
     - name: Create the Package
       run: dotnet pack --no-restore --configuration Release
