--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
       run: dotnet pack --no-restore --configuration Release
       
     - name: Publish
-      run: dotnet nuget push "bin/Release/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/LuizFelipeA/index.json --skip-duplicate
+      run: dotnet nuget push "OutResp/bin/Release/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/LuizFelipeA/index.json --skip-duplicate
