--- a/OutResp/OutResp.csproj
+++ b/OutResp/OutResp.csproj
@@ -12,5 +12,9 @@
     <RepositoryUrl>https://github.com/LuizFelipeA/OutResp</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+  </ItemGroup>
   
 </Project>
