--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: dotnet build --no-restore --configuration Release
     
     - name: Test
-      run: dotnet test --no-build --verbosity minimal OutResp.sln
+      run: dotnet test
     
     - name: Create the Package
       run: dotnet pack --no-restore --configuration Release
