--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,32 +2,94 @@ name: Build and deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
   pull_request:
-    branches: [ main ]
+    branches: [ dev ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  
+  release:
+    name: Release
+    strategy:
+      matrix:
+        kind: ['linux', 'windows', 'macOS']
+        include:
+          - kind: linux
+            os: ubuntu-latest
+            target: linux-x64
+          - kind: windows
+            os: windows-latest
+            target: win-x64
+          - kind: macOS
+            os: macos-latest
+            target: osx-x64
+    runs-on: ${{ matrix.os }}
+    
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-      
-    - name: Build with dotnet
-      run: dotnet build --no-restore --configuration Release
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: 6.0.x
+          
+      - name: Tests
+        run: dotnet test
+        
+      - name: Build and Pack
+        shell: bash
+        run: |
+          # Define variables
+          tag=$(git describe --tags --abbrev=0)
+          release_name="App-$tag-${{ matrix.target }}"
+          
+          # Build
+          dotnet publish OutResp/OutResp.csproj --framework net6.0 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
+
+          # Pack files
+          if [ "${{ matrix.target }}" == "win-x64" ]; then
+            7z a -tzip "${release_name}.zip" "./${release_name}/*"
+          else
+            tar czvf "${release_name}.tar.gz" "$release_name"
+          fi
+
+          # Delete output directory
+          rm -r "$release_name"
+          
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+          with:
+            files: "App*"
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            
+      - name: Create the Package
+        run: dotnet pack --no-restore --configuration Release
+
+      - name: Publish
+        run: dotnet nuget push "OutResp/bin/Release/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/LuizFelipeA/index.json --skip-duplicate
     
-    - name: Test
-      run: dotnet test
-    
-    - name: Create the Package
-      run: dotnet pack --no-restore --configuration Release
-      
-    - name: Publish
-      run: dotnet nuget push "OutResp/bin/Release/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/LuizFelipeA/index.json --skip-duplicate
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v3
+#    - name: Setup .NET Core
+#      uses: actions/setup-dotnet@v2
+#      with:
+#        dotnet-version: 6.0.x
+#    - name: Restore dependencies
+#      run: dotnet restore
+#      
+#    - name: Build with dotnet
+#      run: dotnet build --no-restore --configuration Release
+#    
+#    - name: Test
+#      run: dotnet test
+#    
+#    - name: Create the Package
+#      run: dotnet pack --no-restore --configuration Release
+#      
+#    - name: Publish
+#      run: dotnet nuget push "OutResp/bin/Release/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/LuizFelipeA/index.json --skip-duplicate
