--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,8 @@ jobs:
         run: |
           # Define variables
           tag=$(git describe --tags --abbrev=0)
-          release_name="App-$tag-${{ matrix.target }}"
+          # release_name="App-$tag-${{ matrix.target }}"
+          release_name="release_name_TEST"
           
           # Build
           dotnet publish OutResp/OutResp.csproj --framework net6.0 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
