--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
     name: Release
     strategy:
       matrix:
-        kind: ['linux', 'windows', 'macOS']
+        kind: ['windows', 'macOS']
         include:
-          - kind: linux
-            os: ubuntu-latest
+#          - kind: linux
+#            os: ubuntu-latest
             target: linux-x64
           - kind: windows
             os: windows-latest
@@ -42,8 +42,7 @@ jobs:
         run: |
           # Define variables
           tag=$(git describe --tags --abbrev=0)
-          # release_name="App-$tag-${{ matrix.target }}"
-          release_name="release_name_TEST"
+          release_name="App-$tag-${{ matrix.target }}"
           
           # Build
           dotnet publish OutResp/OutResp.csproj --framework net6.0 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
