--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     name: Release
     strategy:
       matrix:
-        kind: ['windows', 'macOS']
+        kind: ['windows']
         include:
 #          - kind: linux
 #            os: ubuntu-latest
@@ -20,9 +20,9 @@ jobs:
           - kind: windows
             os: windows-latest
             target: win-x64
-          - kind: macOS
-            os: macos-latest
-            target: osx-x64
+#          - kind: macOS
+#            os: macos-latest
+#            target: osx-x64
     runs-on: ${{ matrix.os }}
     
     steps:
