--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,20 +40,17 @@ jobs:
       - name: Build and Pack
         shell: bash
         run: |
-          # Define variables
           tag=$(git describe --tags --abbrev=0)
           release_name="App-$tag-${{ matrix.target }}"
-          
           # Build
           dotnet publish OutResp/OutResp.csproj --framework net6.0 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
-
           # Pack files
           if [ "${{ matrix.target }}" == "win-x64" ]; then
+            # Pack to zip for Windows
             7z a -tzip "${release_name}.zip" "./${release_name}/*"
           else
-            tar czvf "${release_name}.tar.gz" "$release_name"
+          tar czvf "${release_name}.tar.gz" "$release_name"
           fi
-
           # Delete output directory
           rm -r "$release_name"
           
