--- a/.github/workflows/publish_release.workflow.yml
+++ b/.github/workflows/publish_release.workflow.yml
@@ -1,10 +1,4 @@
-#name: Build and deploy
-
-#on:
-#  push:
-#    branches: [ main ]
-#  pull_request:
-#    branches: [ main ]
+name: Publish Release
 
 on:
   release:
@@ -32,15 +26,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
-          
+
       - name: Tests
         run: dotnet test
-        
+
       - name: Build and Pack
         shell: bash
         run: |
@@ -57,40 +51,16 @@ jobs:
           fi
           # Delete output directory
           rm -r "$release_name"
-          
+
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
           files: "App*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            
+
       - name: Create the Package
         run: dotnet pack --no-restore --configuration Release
 
       - name: Publish
         run: dotnet nuget push "OutResp/bin/Release/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/LuizFelipeA/index.json --skip-duplicate
-    
-#  build:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v3
-#    - name: Setup .NET Core
-#      uses: actions/setup-dotnet@v2
-#      with:
-#        dotnet-version: 6.0.x
-#    - name: Restore dependencies
-#      run: dotnet restore
-#      
-#    - name: Build with dotnet
-#      run: dotnet build --no-restore --configuration Release
-#    
-#    - name: Test
-#      run: dotnet test
-#    
-#    - name: Create the Package
-#      run: dotnet pack --no-restore --configuration Release
-#      
-#    - name: Publish
-#      run: dotnet nuget push "OutResp/bin/Release/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/LuizFelipeA/index.json --skip-duplicate
